--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\carlo\\Documents\\NetBeansProjects\\ControleDeEstoque\\dist\\lib\\jcalendar-1.4.jar
-file.reference.sqlite-jdbc-3.23.1.jar-1=C:\\Users\\carlo\\OneDrive\\Faculdade\\4\u00ba Semestre\\ALPOO\\Projeto\\SQL\\DriverJava-SqLite\\sqlite-jdbc-3.23.1.jar
-user.properties.file=C:\\Users\\carlo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\lucas\\Desktop\\WorkSpace\\ControleDeEstoque\\dist\\lib\\jcalendar-1.4.jar
+file.reference.sqlite-jdbc-3.23.1.jar-1=C:\\Users\\lucas\\Desktop\\WorkSpace\\ControleDeEstoque\\dist\\lib\\sqlite-jdbc-3.23.1.jar
+user.properties.file=C:\\Users\\lucas\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
